--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BTDiablo Holy Grail Tracker</title>
     <link rel="stylesheet" href="btdhg.css">
+    <link rel="shortcut icon" href="./btdiablo.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -18,7 +19,7 @@
                 <div id="sets-tab" class="tab sets-tab color-set" onclick="f('sets')">Sets</div>
                 <div id="runes-tab" class="tab runes-tab color-rune" onclick="f('runes')">Runes</div>
                 <div class="search">
-                    <input placeholder="Search" spellcheck="false" value>
+                    <input id="search-box" placeholder="Search" spellcheck="false" value>
                 </div>
             </div>
         </div>
@@ -88,7 +89,7 @@
                 <table id="ethereal-table" class="tg">
                     <thead>
                         <tr>
-                            <th class="tg-0lax" colspan="5">Ethereal</th>
+                            <th class="tg-0lax color-ethereal" colspan="5">Ethereal</th>
                         </tr>
                         <tr>
                             <th class="tg-0lax"></th>
@@ -127,7 +128,7 @@
                 <table id="perfect-table" class="tg">
                     <thead>
                         <tr>
-                            <th class="tg-0lax" colspan="5">Perfect</th>
+                            <th class="tg-0lax" colspan="5">Perfect ★</th>
                         </tr>
                         <tr>
                             <th class="tg-0lax"></th>
