--- a/index.html
+++ b/index.html
@@ -4575,11 +4575,11 @@
 
     <div class="footer">
         <div>
-            <button class="btd-btn" onclick="save()">Save</a>
+            <button class="btd-btn" onclick="save()" title="Save your grail to a local JSON file which can be used to load back in later. Useful for backing up (in case your Local Storage in browser gets wiped out) or if you switch computers or browsers.">Save</a>
         </div>
         <div>
             <input type="file" id="fileInput" style="display: none;" />
-            <label for="fileInput" class="custom-button">Load</label>
+            <label for="fileInput" class="custom-button" title="Load your grail from a previously saved local JSON file.">Load</label>
         </div>
     </div>
 
