--- a/index.html
+++ b/index.html
@@ -4592,12 +4592,12 @@
             <span class="close-btn" id="close-modal">&times;</span>
             <h2>Using BTDiablo Holy Grail</h2>
             <p>
-                Check (or uncheck!) the items you've collected in your adventures in BTDiablo. The grail will automatically update, and you can view your grails statistics on the Statistics tab.<br/>
+                • Check (or uncheck!) the items you've collected in your adventures in BTDiablo. The grail will automatically update, and you can view your grails statistics on the Statistics tab.<br/>
                 <br/>
-                The grail uses your browsers Local Storage to automatically save your progress. <b><u>Please note</u></b> that Local Storage <i>can</i> get cleared out. Clearing your browsers cache, cookies, and/or other site data can clear it out.<br/>
+                • The grail uses your browsers Local Storage to automatically save your progress. <b><u>Please note</u></b> that Local Storage <i>can</i> get cleared out. Clearing your browsers cache, cookies, and/or other site data can clear it out.<br/>
                 <br/>
-                The Save button will export your grail as a JSON file. This file can be imported via the Load button to restore your grail.<br/>
-                This is useful for backing up your grail, or if you switch computers or browsers.
+                • The Save button will export your grail as a JSON file. This file can be imported via the Load button to restore your grail.<br/>
+                • This is useful for backing up your grail, or if you switch computers or browsers.
             </p>
         </div>
     </div>
