--- a/index.html
+++ b/index.html
@@ -4592,7 +4592,7 @@
             <span class="close-btn" id="close-modal">&times;</span>
             <h2>Using BTDiablo Holy Grail</h2>
             <p>
-                • Check (or uncheck!) the items you've collected in your adventures in BTDiablo. The grail will automatically update, and you can view your grails statistics on the Statistics tab.<br/>
+                • Check (or uncheck!) the items you've collected in your adventures in BTDiablo. The grail will automatically update, and you can view your grails progress on the Statistics tab.<br/>
                 <br/>
                 • The grail uses your browsers Local Storage to automatically save your progress. <b><u>Please note</u></b> that Local Storage <i>can</i> get cleared out. Clearing your browsers cache, cookies, and/or other site data can clear it out.<br/>
                 <br/>
