--- a/index.html
+++ b/index.html
@@ -4595,9 +4595,12 @@
                 • Check (or uncheck!) the items you've collected in your adventures in BTDiablo. The grail will automatically update, and you can view your grails progress on the Statistics tab.<br/>
                 <br/>
                 • The grail uses your browsers Local Storage to automatically save your progress. <b><u>Please note</u></b> that Local Storage <i>can</i> get cleared out. Clearing your browsers cache, cookies, and/or other site data can clear it out.<br/>
+                • Also please note - if you use your browsers incognito mode that your Local Storage <b><u>will</u></b> be wiped upon closing Incognito. So, if you use Incognito, <b><u>definitely</u></b> use the Save button before closing your browser.<br/>
                 <br/>
                 • The Save button will export your grail as a JSON file. This file can be imported via the Load button to restore your grail.<br/>
-                • This is useful for backing up your grail, or if you switch computers or browsers.
+                • This is useful for backing up your grail, or if you switch computers or browsers.<br/>
+                <br/>
+                If you find anything wrong please <a href="https://github.com/WolfieeifloW/btdholygrail/issues/new" target="_blank">submit an issue</a> on my GitHub.
             </p>
         </div>
     </div>
