--- a/index.html
+++ b/index.html
@@ -1773,6 +1773,13 @@
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="thunderlords-overcharge-e" id="thunderlords-overcharge-e" onclick="update('thunderlords-overcharge-e')"></td>
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="thunderlords-overcharge-p" id="thunderlords-overcharge-p" onclick="update('thunderlords-overcharge-p')"></td>
                     </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Wind God Fist</td>
+                        <td class="tg-0pky">War Fist</td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="wind-god-fist-a" id="wind-god-fist-a" onclick="update('wind-god-fist-a')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="wind-god-fist-e" id="wind-god-fist-e" onclick="update('wind-god-fist-e')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="wind-god-fist-p" id="wind-god-fist-p" onclick="update('wind-god-fist-p')"></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -2852,6 +2859,13 @@
                         <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="jyms-swift-journey-a" id="jyms-swift-journey-a" onclick="update('jyms-swift-journey-a')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="jyms-swift-journey-e" id="jyms-swift-journey-e" onclick="update('jyms-swift-journey-e')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="jyms-swift-journey-p" id="jyms-swift-journey-p" onclick="update('jyms-swift-journey-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Static Accumulator</td>
+                        <td class="tg-0pky">Leather Boots</td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="static-accumulator-a" id="static-accumulator-a" onclick="update('static-accumulator-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="static-accumulator-e" id="static-accumulator-e" onclick="update('static-accumulator-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="static-accumulator-p" id="static-accumulator-p" onclick="update('static-accumulator-p')"></td>
                     </tr>
                 </tbody>
             </table>
