fixed a few items
Static Accumulator, Spectral Shard, & Cerebus' Bite

--- a/index.html
+++ b/index.html
@@ -479,11 +479,11 @@
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="the-jade-tan-do-p" id="the-jade-tan-do-p" onclick="update('the-jade-tan-do-p')"></td>
                     </tr>
                     <tr>
-                        <td class="color-unique tg-0pky">Irices Shard</td>
+                        <td class="color-unique tg-0pky">Spectral Shard</td>
                         <td class="tg-0pky">Blade</td>
-                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="irices-shard-a" id="irices-shard-a" onclick="update('irices-shard-a')"></td>
-                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="irices-shard-e" id="irices-shard-e" onclick="update('irices-shard-e')"></td>
-                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="irices-shard-p" id="irices-shard-p" onclick="update('irices-shard-p')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="spectral-shard-a" id="spectral-shard-a" onclick="update('spectral-shard-a')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="spectral-shard-e" id="spectral-shard-e" onclick="update('spectral-shard-e')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="spectral-shard-p" id="spectral-shard-p" onclick="update('spectral-shard-p')"></td>
                     </tr>
                     <tr>
                         <td class="color-unique tg-0pky">The Dragon Chang</td>
@@ -2525,11 +2525,11 @@
                         <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="shadowdancer-p" id="shadowdancer-p" onclick="update('shadowdancer-p')"></td>
                     </tr>
                     <tr>
-                        <td class="color-unique tg-0pky">Cerebus</td>
+                        <td class="color-unique tg-0pky">Cerebus' Bite</td>
                         <td class="tg-0pky">blood spirit</td>
-                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="cerebus-a" id="cerebus-a" onclick="update('cerebus-a')"></td>
-                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="cerebus-e" id="cerebus-e" onclick="update('cerebus-e')"></td>
-                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="cerebus-p" id="cerebus-p" onclick="update('cerebus-p')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="cerebus-bite-a" id="cerebus-bite-a" onclick="update('cerebus-bite-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="cerebus-bite-e" id="cerebus-bite-e" onclick="update('cerebus-bite-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="cerebus-bite-p" id="cerebus-bite-p" onclick="update('cerebus-bite-p')"></td>
                     </tr>
                     <tr>
                         <td class="color-unique tg-0pky">Tyrael's Might</td>
@@ -2862,7 +2862,7 @@
                     </tr>
                     <tr>
                         <td class="color-unique tg-0pky">Static Accumulator</td>
-                        <td class="tg-0pky">Leather Boots</td>
+                        <td class="tg-0pky">Boots</td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="static-accumulator-a" id="static-accumulator-a" onclick="update('static-accumulator-a')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="static-accumulator-e" id="static-accumulator-e" onclick="update('static-accumulator-e')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="static-accumulator-p" id="static-accumulator-p" onclick="update('static-accumulator-p')"></td>
