Fixing some item types & names

--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@
                     </tr>
                     <tr>
                         <td class="color-unique tg-0pky">Viperfork</td>
-                        <td class="tg-0pky">War Fork</td>
+                        <td class="tg-0pky">Mancatcher</td>
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="viperfork-a" id="viperfork-a" onclick="update('viperfork-a')"></td>
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="viperfork-e" id="viperfork-e" onclick="update('viperfork-e')"></td>
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="viperfork-p" id="viperfork-p" onclick="update('viperfork-p')"></td>
@@ -2463,14 +2463,14 @@
                     </tr>
                     <tr>
                         <td class="color-unique tg-0pky">Herald of Zakarum</td>
-                        <td class="tg-0pky">Aerin Shield</td>
+                        <td class="tg-0pky">Gilded Shield</td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="herald-of-zakarum-a" id="herald-of-zakarum-a" onclick="update('herald-of-zakarum-a')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="herald-of-zakarum-e" id="herald-of-zakarum-e" onclick="update('herald-of-zakarum-e')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="herald-of-zakarum-p" id="herald-of-zakarum-p" onclick="update('herald-of-zakarum-p')"></td>
                     </tr>
                     <tr>
                         <td class="color-unique tg-0pky">Jalal's Mane</td>
-                        <td class="tg-0pky">Dream Spirit</td>
+                        <td class="tg-0pky">Totemic Mask</td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="jalals-mane-a" id="jalals-mane-a" onclick="update('jalals-mane-a')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="jalals-mane-e" id="jalals-mane-e" onclick="update('jalals-mane-e')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="jalals-mane-p" id="jalals-mane-p" onclick="update('jalals-mane-p')"></td>
@@ -3935,32 +3935,32 @@
                         <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="najs-circlet-p" id="najs-circlet-p" onclick="update('najs-circlet-p')"></td>
                     </tr>
                     <tr>
-                        <td class="color-set tg-0pky">McAuley's Paragon</td>
+                        <td class="color-set tg-0pky">Sander's Paragon</td>
                         <td class="tg-0pky">Cap</td>
-                        <td class="color-set tg-0pky">McAuley's Folly</td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="mcauleys-paragon-a" id="mcauleys-paragon-a" onclick="update('mcauleys-paragon-a')"></td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="mcauleys-paragon-p" id="mcauleys-paragon-p" onclick="update('mcauleys-paragon-p')"></td>
+                        <td class="color-set tg-0pky">Sander's Folly</td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="sanders-paragon-a" id="sanders-paragon-a" onclick="update('sanders-paragon-a')"></td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="sanders-paragon-p" id="sanders-paragon-p" onclick="update('sanders-paragon-p')"></td>
                     </tr>
                     <tr>
-                        <td class="color-set tg-0pky">McAuley's Riprap</td>
+                        <td class="color-set tg-0pky">Sander's Riprap</td>
                         <td class="tg-0pky">Heavy Boots</td>
-                        <td class="color-set tg-0pky">McAuley's Folly</td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="mcauleys-riprap-a" id="mcauleys-riprap-a" onclick="update('mcauleys-riprap-a')"></td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="mcauleys-riprap-p" id="mcauleys-riprap-p" onclick="update('mcauleys-riprap-p')"></td>
+                        <td class="color-set tg-0pky">Sander's Folly</td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="sanders-riprap-a" id="sanders-riprap-a" onclick="update('sanders-riprap-a')"></td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="sanders-riprap-p" id="sanders-riprap-p" onclick="update('sanders-riprap-p')"></td>
                     </tr>
                     <tr>
-                        <td class="color-set tg-0pky">McAuley's Taboo</td>
+                        <td class="color-set tg-0pky">Sander's Taboo</td>
                         <td class="tg-0pky">Heavy Gloves</td>
-                        <td class="color-set tg-0pky">McAuley's Folly</td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="mcauleys-taboo-a" id="mcauleys-taboo-a" onclick="update('mcauleys-taboo-a')"></td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="mcauleys-taboo-p" id="mcauleys-taboo-p" onclick="update('mcauleys-taboo-p')"></td>
+                        <td class="color-set tg-0pky">Sander's Folly</td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="sanders-taboo-a" id="sanders-taboo-a" onclick="update('sanders-taboo-a')"></td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="sanders-taboo-p" id="sanders-taboo-p" onclick="update('sanders-taboo-p')"></td>
                     </tr>
                     <tr>
-                        <td class="color-set tg-0pky">McAuley's Superstition</td>
+                        <td class="color-set tg-0pky">Sander's Superstition</td>
                         <td class="tg-0pky">Bone Wand</td>
-                        <td class="color-set tg-0pky">McAuley's Folly</td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="mcauleys-superstition-a" id="mcauleys-superstition-a" onclick="update('mcauleys-superstition-a')"></td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="mcauleys-superstition-p" id="mcauleys-superstition-p" onclick="update('mcauleys-superstition-p')"></td>
+                        <td class="color-set tg-0pky">Sander's Folly</td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="sanders-superstition-a" id="sanders-superstition-a" onclick="update('sanders-superstition-a')"></td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="sanders-superstition-p" id="sanders-superstition-p" onclick="update('sanders-superstition-p')"></td>
                     </tr>
                     <tr>
                         <td class="color-set tg-0pky">Nadin's Determination</td>
