Added 11 new items

--- a/index.html
+++ b/index.html
@@ -1745,6 +1745,34 @@
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="wind-god-fist-e" id="wind-god-fist-e" onclick="update('wind-god-fist-e')"></td>
                         <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="wind-god-fist-p" id="wind-god-fist-p" onclick="update('wind-god-fist-p')"></td>
                     </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Skorn</td>
+                        <td class="tg-0pky">Ghost Glaive</td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="skorn-a" id="skorn-a" onclick="update('skorn-a')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="skorn-e" id="skorn-e" onclick="update('skorn-e')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="skorn-p" id="skorn-p" onclick="update('skorn-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Calamity</td>
+                        <td class="tg-0pky">Maiden Javelin</td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="calamity-a" id="calamity-a" onclick="update('calamity-a')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="calamity-e" id="calamity-e" onclick="update('calamity-e')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="calamity-p" id="calamity-p" onclick="update('calamity-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Slanderer</td>
+                        <td class="tg-0pky">Katar</td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="slanderer-a" id="slanderer-a" onclick="update('slanderer-a')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="slanderer-e" id="slanderer-e" onclick="update('slanderer-e')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="slanderer-p" id="slanderer-p" onclick="update('slanderer-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Destiny</td>
+                        <td class="tg-0pky">Eagle Orb</td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-o" type="checkbox" name="destiny-a" id="destiny-a" onclick="update('destiny-a')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-e" type="checkbox" name="destiny-e" id="destiny-e" onclick="update('destiny-e')"></td>
+                        <td class="tg-0pky"><input class="weapons-cb weapons-cb-p" type="checkbox" name="destiny-p" id="destiny-p" onclick="update('destiny-p')"></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -2832,6 +2860,41 @@
                         <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="static-accumulator-e" id="static-accumulator-e" onclick="update('static-accumulator-e')"></td>
                         <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="static-accumulator-p" id="static-accumulator-p" onclick="update('static-accumulator-p')"></td>
                     </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Robe of the Horadrim</td>
+                        <td class="tg-0pky">Dusk Shroud</td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="robe-of-the-horadrim-a" id="robe-of-the-horadrim-a" onclick="update('robe-of-the-horadrim-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="robe-of-the-horadrim-e" id="robe-of-the-horadrim-e" onclick="update('robe-of-the-horadrim-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="robe-of-the-horadrim-p" id="robe-of-the-horadrim-p" onclick="update('robe-of-the-horadrim-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Numbness</td>
+                        <td class="tg-0pky">Preserved Head</td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="numbness-a" id="numbness-a" onclick="update('numbness-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="numbness-e" id="numbness-e" onclick="update('numbness-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="numbness-p" id="numbness-p" onclick="update('numbness-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Pride</td>
+                        <td class="tg-0pky">Jawbone Cap</td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="pride-a" id="pride-a" onclick="update('pride-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="pride-e" id="pride-e" onclick="update('pride-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="pride-p" id="pride-p" onclick="update('pride-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Honor</td>
+                        <td class="tg-0pky">Rondache</td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="honor-a" id="honor-a" onclick="update('honor-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="honor-e" id="honor-e" onclick="update('honor-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="honor-p" id="honor-p" onclick="update('honor-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Mad Dog</td>
+                        <td class="tg-0pky">Wolf Head</td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="mad-dog-a" id="mad-dog-a" onclick="update('mad-dog-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="mad-dog-e" id="mad-dog-e" onclick="update('mad-dog-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="mad-dog-p" id="mad-dog-p" onclick="update('mad-dog-p')"></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -3056,6 +3119,18 @@
                         <td class="tg-0pky">Amulet</td>
                         <td class="tg-0pky"><input class="other-cb other-cb-o" type="checkbox" name="corrupted-saracens-chance-a" id="corrupted-saracens-chance-a" onclick="update('corrupted-saracens-chance-a')"></td>
                         <td class="tg-0pky"><input class="other-cb other-cb-p" type="checkbox" name="corrupted-saracens-chance-p" id="corrupted-saracens-chance-p" onclick="update('corrupted-saracens-chance-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Killing Intent</td>
+                        <td class="tg-0pky">Jewel</td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-o" type="checkbox" name="killing-intent-a" id="killing-intent-a" onclick="update('killing-intent-a')"></td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-p" type="checkbox" name="killing-intent-p" id="killing-intent-p" onclick="update('killing-intent-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Elemental Exposure</td>
+                        <td class="tg-0pky">Jewel</td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-o" type="checkbox" name="elemental-exposure-a" id="elemental-exposure-a" onclick="update('elemental-exposure-a')"></td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-p" type="checkbox" name="elemental-exposure-p" id="elemental-exposure-p" onclick="update('elemental-exposure-p')"></td>
                     </tr>
                 </tbody>
             </table>
