Added Magic Rainbow Facet

--- a/index.html
+++ b/index.html
@@ -3103,6 +3103,18 @@
                         <td class="tg-0pky"><input class="other-cb other-cb-p" type="checkbox" name="rainbow-facet-poison-level-p" id="rainbow-facet-poison-level-p" onclick="update('rainbow-facet-poison-level-p')"></td>
                     </tr>
                     <tr>
+                        <td class="color-unique tg-0pky">Rainbow Facet Magic Die</td>
+                        <td class="tg-0pky">Jewel</td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-o" type="checkbox" name="rainbow-facet-magic-die-a" id="rainbow-facet-magic-die-a" onclick="update('rainbow-facet-magic-die-a')"></td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-p" type="checkbox" name="rainbow-facet-magic-die-p" id="rainbow-facet-magic-die-p" onclick="update('rainbow-facet-magic-die-p')"></td>
+                    </tr>
+                    <tr>
+                        <td class="color-unique tg-0pky">Rainbow Facet Magic Level</td>
+                        <td class="tg-0pky">Jewel</td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-o" type="checkbox" name="rainbow-facet-magic-level-a" id="rainbow-facet-magic-level-a" onclick="update('rainbow-facet-magic-level-a')"></td>
+                        <td class="tg-0pky"><input class="other-cb other-cb-p" type="checkbox" name="rainbow-facet-magic-level-p" id="rainbow-facet-magic-level-p" onclick="update('rainbow-facet-magic-level-p')"></td>
+                    </tr>
+                    <tr>
                         <td class="color-unique tg-0pky">Hellfire Torch</td>
                         <td class="tg-0pky">Charm</td>
                         <td class="tg-0pky"><input class="other-cb other-cb-o" type="checkbox" name="hellfire-torch-a" id="hellfire-torch-a" onclick="update('hellfire-torch-a')"></td>
