File upload set to JSON files

--- a/index.html
+++ b/index.html
@@ -4641,7 +4641,7 @@
             <span id="help-icon">?</span>
         </div>
         <div>
-            <input type="file" id="fileInput" style="display: none;" />
+            <input type="file" id="fileInput" style="display: none;" accept="application/json" />
             <label for="fileInput" class="custom-button" title="Load your grail from a previously saved local JSON file.">Load</label>
         </div>
     </div>
