--- a/index.html
+++ b/index.html
@@ -2429,9 +2429,9 @@
                     <tr>
                         <td class="color-unique tg-0pky">Thundergod's Vigor</td>
                         <td class="tg-0pky">War Belt</td>
-                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="thundergods-vigor-a" id="thundergods-vigor-a" onclick="update('thundergods-vigor-a')"></td>
-                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="thundergods-vigor-e" id="thundergods-vigor-e" onclick="update('thundergods-vigor-e')"></td>
-                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="thundergods-vigor-p" id="thundergods-vigor-p" onclick="update('thundergods-vigor-p')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-o" type="checkbox" name="thudergods-vigor-a" id="thudergods-vigor-a" onclick="update('thudergods-vigor-a')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-e" type="checkbox" name="thudergods-vigor-e" id="thudergods-vigor-e" onclick="update('thudergods-vigor-e')"></td>
+                        <td class="tg-0pky"><input class="armor-cb armor-cb-p" type="checkbox" name="thudergods-vigor-p" id="thudergods-vigor-p" onclick="update('thudergods-vigor-p')"></td>
                     </tr>
                     <tr>
                         <td class="color-unique tg-0pky">Harlequin Crest</td>
@@ -3850,8 +3850,8 @@
                         <td class="color-set tg-0pky">Dark Adherent</td>
                         <td class="tg-0pky">Dusk Shroud</td>
                         <td class="color-set tg-0pky">The Disciple</td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="dark-adherent-a" id="dark-adherent-a" onclick="update('dark-adherent-a')"></td>
-                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="dark-adherent-p" id="dark-adherent-p" onclick="update('dark-adherent-p')"></td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-o" type="checkbox" name="spiritual-custodian-a" id="spiritual-custodian-a" onclick="update('spiritual-custodian-a')"></td>
+                        <td class="tg-0pky"><input class="sets-cb sets-cb-p" type="checkbox" name="spiritual-custodian-p" id="spiritual-custodian-p" onclick="update('spiritual-custodian-p')"></td>
                     </tr>
                     <tr>
                         <td class="color-set tg-0pky">Credendum</td>
